@@ -177,9 +177,25 @@ static const struct ramtron_parts_s g_ramtron_parts[] =
     RAMTRON_INIT_CLK_MAX          /* speed */
   },
   {
+    "FM25V01A",                   /* name */
+    0x21,                         /* id1 */
+    0x08,                         /* id2 */
+    16L*1024L,                    /* size */
+    2,                            /* addr_len */
+    RAMTRON_INIT_CLK_MAX          /* speed */
+  },
+  {
     "FM25V02",                    /* name */
     0x22,                         /* id1 */
     0x00,                         /* id2 */
+    32L*1024L,                    /* size */
+    2,                            /* addr_len */
+    RAMTRON_INIT_CLK_MAX          /* speed */
+  },
+  {
+    "FM25V02A",                   /* name */
+    0x22,                         /* id1 */
+    0x08,                         /* id2 */
     32L*1024L,                    /* size */
     2,                            /* addr_len */
     RAMTRON_INIT_CLK_MAX          /* speed */
@@ -221,6 +237,22 @@ static const struct ramtron_parts_s g_ramtron_parts[] =
     0x24,                         /* id1 */
     0x01,                         /* id2 */
     128L*1024L,                   /* size */
+    3,                            /* addr_len */
+    RAMTRON_INIT_CLK_MAX          /* speed */
+  },
+  {
+    "FM25V20A",                   /* name */
+    0x25,                         /* id1 */
+    0x08,                         /* id2 */
+    256L*1024L,                   /* size */
+    3,                            /* addr_len */
+    RAMTRON_INIT_CLK_MAX          /* speed */
+  },
+  {
+    "CY15B104Q",                  /* name */
+    0x26,                         /* id1 */
+    0x08,                         /* id2 */
+    512L*1024L,                   /* size */
     3,                            /* addr_len */
     RAMTRON_INIT_CLK_MAX          /* speed */
   },
